--- a/app/style/about.less
+++ b/app/style/about.less
@@ -239,7 +239,7 @@
   background-position: 50% 50%;
   background-size: cover;
   height: 520px;
-  margin-bottom: 70px;
+  margin-bottom: 50px;
   position: relative;
   .header {
     position: absolute;
@@ -259,15 +259,15 @@
 }
 
 .marketing-home-wrapper {
-  max-width: 763px;
+  max-width: 910px;
   margin: 0 auto;
   font-size: 16px;
   h1 {
     color: #002b5c;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
   p {
-    margin-bottom: 20px;
+    margin-bottom:30px;
   }
 }
 
@@ -281,7 +281,7 @@
 
 .brand-heritage {
   margin: 0 auto;
-  max-width: 763px;
+  max-width: 910px;
   h1 {
     margin-bottom: 20px;
   }
@@ -294,8 +294,8 @@
 
 // contact us
 .contact-block {
-  margin-bottom: 30px;
-  margin-top: 20px;
+  margin-bottom: 50px;
+  margin-top: 50px;
 }
 .contact-service {
   height: 500px;
@@ -336,7 +336,10 @@
 }
 
 .enqury-desc {
-  margin-bottom: 20px;
+  font-size: 16px;
+  margin-top: 0px;
+  line-height: 30px;
+  margin-bottom: 30px;
 }
 
 .contact-map {
@@ -357,8 +360,8 @@
 
 .career-desc {
   font-size: 16px;
-  margin-top: 20px;
-  line-height: 25px;
+  margin-top: 0px;
+  line-height: 30px;
 }
 
 .management-pic-wrapper {
@@ -561,7 +564,7 @@
   max-width: 850px;
   h2 {
     text-align: center;
-    margin-bottom: 52px;
+    margin-bottom: 30px;
     font-size: 26px;
     font-weight: 100;
   }
