--- a/app/style/home.less
+++ b/app/style/home.less
@@ -64,7 +64,7 @@
 }
 
 .agree-terms {
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .slider-wrapper {
@@ -302,7 +302,7 @@
     }
     h6 {
       font-size: 16px;
-      font-weight: 200;
+      font-weight: 400;
     }
     p {
       margin-top: 5px;
@@ -329,14 +329,16 @@
   font-size: 16px;
   margin-top: 22px;
   margin-bottom: 22px;
-  padding:0 15px;
+  // padding:0 15px;
+  line-height: 28px;
 }
 
 .join-team-desc {
   font-size: 16px;
   margin: 20px auto;
-  padding: 15px;
-  max-width: 850px;
+  // padding: 15px;
+  max-width: 910px;
+  line-height: 28px;
 }
 
 .our-team-member {
@@ -364,7 +366,7 @@
   padding: 15px;
   .join-our-team {
     max-width: 660px;
-    margin:0 auto;
+    margin:40px auto;
     margin-bottom: 50px;
     .col-md-6 {
       margin-top: 15px;
