--- a/app/style/main.less
+++ b/app/style/main.less
@@ -18,7 +18,7 @@
 
 html, body {
   padding: 0;
-  font-size: 16px;
+  font-size: 14px;
   font-family: 'Open Sans', sans-serif;
 }
 * {
@@ -74,10 +74,15 @@ label.error {
 }
 .title-h1 {
   display: block!important;
-  font-size: 2em!important;
-  font-weight: 700!important;
+  font-size:28px!important;
+  font-weight: 300!important;
 }
-
+.title-parg {
+  display: block!important;
+  font-size: 28px!important;
+  font-weight: 300!important;
+  margin-bottom: 30px;
+}
 // form label{
 //   text-transform: uppercase;
 // }
