--- a/app/style/mockup-checkbox.less
+++ b/app/style/mockup-checkbox.less
@@ -208,12 +208,12 @@ width: 120px;
 
 .common-btn {
   height: 33px;
-  line-height: 33px;
+  line-height: 30px;
   cursor: pointer;
   width: auto!important;
-  font-weight: lighter;
+  font-weight: 400;
   border-radius: 0;
-  font-size: 16px;
+  font-size: 14px;
   color: white;
   text-align: center;
   border: 1px solid #000;
