--- a/app/style/result.less
+++ b/app/style/result.less
@@ -1,6 +1,6 @@
 // buy, rent page
 .result-page {
-  padding: 10px;
+  padding:0px 10px 60px 0;
   .sub-slider {
     margin: 0 -12px;
     height: 170px;
@@ -42,9 +42,9 @@
   }
 }
 .search-header {
-  margin-top: 10px;
-  font-size: 12px;
-  margin-bottom: 4px;
+  margin-top: 30px;
+  font-size: 14px;
+  // margin-bottom: 4px;
   a {
     text-decoration: none;
     color: black;
@@ -118,8 +118,8 @@
 }
 
 .pagination {
-  padding: 15px;
-  display:display-block;
+  padding: 30px;
+  display:block;
   li {
     height: 30px;
     width: 30px;
@@ -152,7 +152,7 @@
 }
 
 .no-result {
-  font-size: 16px;
+  font-size: 14px;
   margin-top: 40px;
 }
 
