--- a/app/view/about/brand-heritage.html
+++ b/app/view/about/brand-heritage.html
@@ -11,8 +11,8 @@
 <body>
   {% include "../base/header.html" %}
   <div class="history-bg"></div>
-  <div class="brand-heritage" style="margin-top: 30px;">
-    <h1 class="text-center">Sotheby’s Heritage</h1>
+  <div class="brand-heritage" style="margin-top:50px;">
+    <h1 class="text-center title-parg">Sotheby’s Heritage</h1>
     <p class="career-desc">
         The Sotheby’s International Realty® brand harnesses the worldwide recognition and prestige of the Sotheby’s name. Auctioneers since 1744 with a fine tradition of marketing the world’s most cherished possessions, Sotheby’s is now an innovative global art business serving the most discerning clientele. Sotheby’s International Realty benefits from this tradition and innovation through equity in the Sotheby’s brand name and marketing collaboration.
     </p>
@@ -138,7 +138,7 @@
   </div>
   
   <div class="brand-heritage" style="margin-top: 50px;">
-    <h1 class="text-center" >Sotheby’s International Realty <span style="font-size: 16px;vertical-align: top;">®</span></h1>
+    <h1 class="text-center title-parg" >Sotheby’s International Realty <span style="font-size: 14px;vertical-align: top;">®</span></h1>
     <p class="career-desc">
         Founded on the same commitment to exceptional service that characterized the Sotheby’s Auction House for more than two centuries, the Sotheby’s International Realty® brand is created and becomes known around the world for the distinctive properties it represents. 
     </p>
@@ -148,7 +148,7 @@
   </div>
 
   <div class="brand-heritage" style="margin-top: 50px;">
-    <h1 class="text-center">List Group</h1>
+    <h1 class="text-center title-parg">List Group</h1>
     <p class="career-desc">
         The List Company was established in 1991, immediately after the real estate bubble burst in Japan. The focus of our organization was to transform the real estate industry that was in a period of chaos at the time, and restore the real value of real estate and trust in real estate as an asset. 
     </p>
@@ -166,11 +166,11 @@
     </p>
   </div>
   <div class="brand-heritage" style="margin-top: 50px; ">
-    <h1 class="text-center">List Sotheby’s International Realty</h1>
+    <h1 class="text-center title-parg">List Sotheby’s International Realty</h1>
     <p class="career-desc">
         Adding to the List Group family, List Sotheby’s International Realty is proud to announce its new office opening in Hong Kong, beside offices in Japan, Hawaii, Philippines and Singapore. The Group will soon open a new office in Bangkok, Thailand to serve luxury residential property clients in 2018.
     </p>
-    <p class="career-desc" style="padding-bottom:20px;">List Sotheby’s International Realty continues to expand in Hong Kong List Sotheby’s International Realty in Hong Kong is now building a carefully selected team of dynamic staff. Hiring criteria and continuous training will be rigorous to ensure the quality of service standards and compliance to the brand philosophy. Starting with a first office on Hong Kong Island, an addition of a Kowloon office is expected to take place in due course.</p>
+    <p class="career-desc" style="padding-bottom:30px;">List Sotheby’s International Realty continues to expand in Hong Kong List Sotheby’s International Realty in Hong Kong is now building a carefully selected team of dynamic staff. Hiring criteria and continuous training will be rigorous to ensure the quality of service standards and compliance to the brand philosophy. Starting with a first office on Hong Kong Island, an addition of a Kowloon office is expected to take place in due course.</p>
   </div>
   {% include "../base/footer.html" %}
 </body>
