--- a/app/view/about/careers.html
+++ b/app/view/about/careers.html
@@ -11,8 +11,8 @@
   {% include "../base/header.html" %}
   {% import "../base/forms.html" as forms %}
   <div class="career-bg"></div>
-  <div class="container" style="margin-top: 30px; margin-bottom: 25px;">
-    <h1 class="text-center">Careers</h1>
+  <div class="container" style="margin-top: 50px; margin-bottom:50px;">
+    <h1 class="text-center title-parg">Careers</h1>
     <p class="career-desc">
       Since the founding of Sotheby’s International Realty in 2004, the firm has maintained an unshakable reputation for showcasing unique and distinguished properties around the world, its innovative and consistently evolving marketing strategies, and above all, the talent and diversity of its employees. <br>
     </p>
