--- a/app/view/about/management.html
+++ b/app/view/about/management.html
@@ -10,8 +10,8 @@
 <body>
   {% include "../base/header.html" %}
   {% import "../base/forms.html" as forms %}
-  <div class="container" style="margin-top: 30px; margin-bottom: 25px;">
-    <h1 class="text-center" style=" margin-bottom: 30px">Management</h1>
+  <div class="container" style="margin-top:50px; margin-bottom: 50px;">
+    <h1 class="text-center title-parg" >Management</h1>
 
     <div class="management-pic-wrapper">
       <img src="/public/images/management/Hisashi_Kitami.jpg" alt="Management">
