--- a/app/view/about/marketing-property.html
+++ b/app/view/about/marketing-property.html
@@ -15,10 +15,10 @@
     <p class="career-desc text-center" style="margin-bottom: 40px;">List SIR relies on a unique and resourceful property database with professional, high-resolution photos accessible by all of our affiliates in order to better serve its clients worldwide. In addition to what is featured on the List SIR website, one can also enjoy exciting property features showcased in sophisticate global publications such as The New York Times, The Wall Street Journal, The Financial Times, and Forbes Magazine, among others.</p>
   </div> -->
   <div class="marketing-home-bg">
-    <h1 class="header">MARKETING YOUR HOME</h1>
     <div class="right-corner">Countryside, used with permission</div>
   </div>
   <div class="marketing-home-wrapper">
+      <span class="text-center title-parg">MARKETING YOUR HOME</span>
     <p class="career-desc">
       Our sales and marketing strategy is all about making impressions worldwide. It’s about creating global connections and establishing true consumer engagement.
     </p>
@@ -26,7 +26,7 @@
       <a class="common-btn" href="/list-property" style="width: 250px;display: inline-block;">List Your Property</a>
     </p>
   </div>
-  <iframe id="ifr" onload="onloadMP();" src="/marketing-your-home" scrolling="no" style="width:100%;height: 600px; margin-bottom:30px;" frameborder="0"></iframe>
+  <iframe id="ifr" onload="onloadMP();" src="/marketing-your-home" scrolling="no" style="width:100%;height: 600px; margin-bottom:50px;" frameborder="0"></iframe>
   <script>
     function onloadMP() {
       var ifr = document.getElementById('ifr');
