--- a/app/view/base/footer.html
+++ b/app/view/base/footer.html
@@ -6,9 +6,9 @@
     </div>
     <div class="row">
       <div class="col-lg-6 col-md-12 col-sm-12 list">
-        <div style="width: 200px;">
-           <img src="/public/images/s-logo-b.png"   style="width: 200px;" />
-        </div>
+          <div style="width: 300px;">
+              <img src="public/images/footer-logo.png" style="width: 300px;">
+           </div>
         <div class="link-group" style="margin-left: 4px;">
           <p class="link"><a href="/">HOME</a></p>
           <p class="link"><a href="/buy-search">BUY</a></p>
