--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -17,8 +17,10 @@
   </div>
   <div class="marketing-wrapper">
     <div class="s-container marketing">
-      <div class="title title-h1">
-        {{__('MARKETING YOUR PROPERTY')}}
+      <div class="title">
+          <span class="title-h1">        {{__('MARKETING YOUR PROPERTY')}}
+            </span>
+
       </div>
       <div class="content">
         <div class="row">
