--- a/app/view/international/international-list.html
+++ b/app/view/international/international-list.html
@@ -10,10 +10,11 @@
 <body>
   {% include "../base/header.html" %}
   <div class="s-container ">
-    <h1 class="text-center" style="margin-top: 30px;">For  the ongoing collection of life<span style="font-size: 16px;vertical-align: top;">®</span></h1>
-    <p class="text-center" style="font-size: 16px;">We carry some of the most prestigious and exclusive properties worldwide </p>
+    <span class="text-center title-h1" style="margin-top:50px; margin-bottom:30px;" >For  the ongoing collection of life<span style="font-size: 14px;vertical-align: top;">®</span></span>
+   <div class="marketing-home-wrapper">   <p class="text-center our-team-desc">We carry some of the most prestigious and exclusive properties worldwide </p></div>
+  
     <div class="international-list">
-      <div class="row" style="max-width:763px; margin: 20px auto;margin-bottom: 50px;">
+      <div class="row" style="margin: 20px auto;margin-bottom: 50px;">
        
         {% for item in data %}
         <div class="box-outter">
