--- a/app/view/international/international.html
+++ b/app/view/international/international.html
@@ -80,34 +80,34 @@
                 <div class="row"> 
                 <div class="col-md-12 field-row"> 
                   <div class="input-field"> 
-                  <label for="enquiry-box-name"> NAME </label> 
-                  <input maxlength="255" autocomplete="off" name="enquiry-box-name" value="" type="text" id="enquiry-box-name" /> 
-                  <div class="xline"></div> 
+                    <label for="enquiry-box-name"> NAME </label> 
+                    <input maxlength="255" autocomplete="off" name="enquiry-box-name" value="" type="text" id="enquiry-box-name" /> 
+                    <div class="xline"></div> 
                   </div> 
                 </div> 
                 <div class="col-md-12 field-row"> 
                   <div class="input-field"> 
-                  <label for="enquiry-box-mobile">PHONE </label> 
-                  <input maxlength="255" autocomplete="off" name="enquiry-box-mobile" value="" type="text" id="enquiry-box-mobile" /> 
-                  <div class="xline"></div> 
+                    <label for="enquiry-box-mobile">PHONE </label> 
+                    <input maxlength="255" autocomplete="off" name="enquiry-box-mobile" value="" type="text" id="enquiry-box-mobile" /> 
+                    <div class="xline"></div> 
                   </div> 
                 </div> 
               </div> 
               <div class="row"> 
                 <div class="col-md-12 field-row"> 
                   <div class="input-field"> 
-                  <label for="enquiry-box-email">EMAIL </label> 
-                  <input maxlength="255" autocomplete="off" name="enquiry-box-email" value="" type="text" id="enquiry-box-email" /> 
-                  <div class="xline"></div> 
+                    <label for="enquiry-box-email">EMAIL </label> 
+                    <input maxlength="255" autocomplete="off" name="enquiry-box-email" value="" type="text" id="enquiry-box-email" /> 
+                    <div class="xline"></div> 
                   </div> 
                 </div> 
                 </div>
               <div class="row"> 
                 <div class="col-md-12 field-row"> 
                   <div class="input-field"> 
-                  <label for="enquiry-box-budget">BUDGET </label> 
-                  <input maxlength="255" autocomplete="off" name="enquiry-box-budget" value="" type="text" id="enquiry-box-budget" /> 
-                  <div class="xline"></div> 
+                    <label for="enquiry-box-budget">BUDGET </label> 
+                    <input maxlength="255" autocomplete="off" name="enquiry-box-budget" value="" type="text" id="enquiry-box-budget" /> 
+                    <div class="xline"></div> 
                   </div> 
                 </div> 
               </div> 
@@ -227,6 +227,7 @@
               margin-left:25px;
             }
           </style>
+        </div>
       </div>
     </div>
   </div>
