--- a/app/style/footer.less
+++ b/app/style/footer.less
@@ -39,7 +39,7 @@
       margin-top: 20px;
       text-align: right;
       h2 {
-        font-size: 16px;
+        font-size: 14px;
         font-weight: 100;
         margin-top: 20px;
       }
@@ -75,7 +75,7 @@
       margin-top: 13px;
       height: 33px;
       color: black;
-      font-weight: lighter;
+      font-weight: 400;
       font-size: 14px;
       line-height: 33px;
       text-transform: uppercase;
