--- a/app/style/property-detail.less
+++ b/app/style/property-detail.less
@@ -120,6 +120,7 @@
 .detail-banner {
   position: relative;
   height: 60px;
+  margin-bottom: 20px;
  .banner {
     position: absolute;
     top: 0;
@@ -238,7 +239,7 @@
     }
   }
   .title {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 400;
   }
   .count {
@@ -280,7 +281,7 @@
     color: @primary-color;
     cursor: pointer;
     height: 20px;
-    font-size: 16px;
+    font-size: 14px;
   }
   .body {
     height: auto;
@@ -288,7 +289,7 @@
     h2 {
       margin-left: -8px;
       margin-top: 12px;
-      font-size: 16px;
+      font-size: 14px;
       font-weight: 600;
       &:first {
         margin-top: 10px;
@@ -317,7 +318,7 @@
     height: 32px;
     padding: 5px 20px;
     font-weight: 100;
-    font-size: 16px;
+    font-size: 14px;
     color: white;
     background-color: black;
   }
