--- a/app/view/about/contact-us.html
+++ b/app/view/about/contact-us.html
@@ -16,7 +16,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="contact-service">
-          <h1 class="contact-us-h2">Contact Us</h1>
+          <h1 class="title-parg">Contact Us</h1>
           <div class="item">
             <div class="img tel"></div>
             <label>+852 3793 3688</label>
