--- a/app/view/about/csr.html
+++ b/app/view/about/csr.html
@@ -11,9 +11,9 @@
   {% include "../base/header.html" %}
   {% import "../base/forms.html" as forms %}
   <div class="csr-bg"></div>
-  <div class="container" style="margin-top: 30px; margin-bottom: 25px;">
-    <h1 class="text-center">Corporate Social Responsibilities </h1>
-    <p class="career-desc" style="margin-bottom: 40px;">While we strive to maintain the strongest team to remain competitive in the property industry, it is not at the expense of our commitment to our staff and the wellbeing of our associates and how they impact the community. In providing a sound work environment with competitive benefits, we are proud to attract and retain an outstanding group of individuals with a true passion for what they do. As part of List Sotheby’s International Realty, we are honored to represent the best of the industry and anticipate future opportunities to give back to the local community. </p>
+  <div class="container" style="margin-top:50px;">
+    <h1 class="text-center title-parg">Corporate Social Responsibilities </h1>
+    <p class="career-desc" style="margin-bottom: 50px;">While we strive to maintain the strongest team to remain competitive in the property industry, it is not at the expense of our commitment to our staff and the wellbeing of our associates and how they impact the community. In providing a sound work environment with competitive benefits, we are proud to attract and retain an outstanding group of individuals with a true passion for what they do. As part of List Sotheby’s International Realty, we are honored to represent the best of the industry and anticipate future opportunities to give back to the local community. </p>
   </div>
   <div class="csr-contact">
     <h2 class="title-h1">Contact Us</h2>
