--- a/app/view/international/gallery.html
+++ b/app/view/international/gallery.html
@@ -1,4 +1,4 @@
-  <div id="video-full-wrapper" class="full-cover" style="display: none;z-index:9999999;background:rgba(0,0,0,.8)">
+  <div id="video-full-wrapper" class="full-cover" style="display: none;z-index:9999999;background:rgba(0,0,0,.6)">
     <div class="close-full"></div>
     <div class="fulll-video-layer">
       <div id="video-full-wrapper-box" style="max-width: 1280px; margin: 0 auto;">
@@ -18,7 +18,10 @@
       $(window).resize(function() {
         setFullVideoCenter();
       });
-
+      var videoEl = document.getElementById('full-video-page');
+      videoEl.onloadeddata = function() {
+        setFullVideoCenter();
+      }
       function setFullVideoCenter() {
         var $root = $('#video-full-wrapper'),
             $videoBox = $('#video-full-wrapper-box'),
