--- a/app/view/our-team/our-team.html
+++ b/app/view/our-team/our-team.html
@@ -11,9 +11,9 @@
   {% include "../base/header.html" %}
   {% include "./member-detail.html" %}
   {% import "../base/forms.html" as forms %}
-  <div class="container" style="margin-top: 30px;margin-bottom: 25px;">
-      <h1 class="text-center">Our Team</h1>
-      <p style="margin-top:25px;" class="our-team-desc">
+  <div class="marketing-home-wrapper" style="margin-top: 50px;margin-bottom: 30px;">
+      <span class="text-center title-parg">Our Team</span>
+      <p  class="our-team-desc">
       We at List Sotheby’s International Realty are proud to introduce our highly qualified team of associates who are poised and ready to assist you with all of your property needs. Each of our accredited agents holds a distinguished transaction record, is well-versed and up-to-date on the current local laws and regulations effecting the Hong Kong real estate market, and adheres to a strict code of ethics and confidentiality in line with our company policy. 
       <br>
       <br>
@@ -64,10 +64,11 @@
       });
     </script>
   </div>
-  <div class="form-wrapper">
-    <h1 class="text-center" >Join Our Team</h1>
+  <div class="form-wrapper" >
+    <div class="marketing-home-wrapper" style="margin-top: 20px;margin-bottom: 30px;">
+      <span class="text-center title-parg">Join Our Team</span>
     <p class="join-team-desc">List Sotheby’s International Realty is a family comprised of diverse, knowledgeable, and seasoned agents with in-depth knowledge of market trends within the luxury property market, both in Hong Kong and abroad. We are constantly in search of expanding our team of agents and excited to meet like-minded professionals with the drive and appreciation for excellence to contribute to our expanding operation. </p>
-    <form id="recruitment-form" onsubmit="return false;" class="join-our-team">
+  </div> <form id="recruitment-form" onsubmit="return false;" class="join-our-team">
        <div class="row">
          <div class="col-md-6 col-sm-6 col-sm-12">
            {{forms.field('name', 'NAME')}}
