--- a/app/view/base/base.html
+++ b/app/view/base/base.html
@@ -4,9 +4,9 @@
 <script src="/public/js/jquery.throttle.js"></script>
 <script src="/public/js/jquery.validate.js"></script>
 <script src="/public/js/jquery.tooltip.js"></script>
-<script src="/public/js/global.js"></script>
+<script src="/public/js/global.js?=v=1.1.14"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css"> 
-<link rel="stylesheet" href="public/css/main.css?v=1.1.13">
+<link rel="stylesheet" href="public/css/main.css?v=1.1.14">
 <link rel="icon" href="/favicon.ico?v=2" />
 
 <script type="text/javascript">
