--- a/app/style/footer.less
+++ b/app/style/footer.less
@@ -75,7 +75,7 @@
       margin-top: 13px;
       height: 33px;
       color: black;
-      font-weight: 400;
+      font-weight: lighter;
       font-size: 14px;
       line-height: 33px;
       text-transform: uppercase;
