--- a/app/style/mockup-checkbox.less
+++ b/app/style/mockup-checkbox.less
@@ -211,7 +211,7 @@ width: 120px;
   line-height: 30px;
   cursor: pointer;
   width: auto!important;
-  font-weight: 400;
+  font-weight: lighter;
   border-radius: 0;
   font-size: 14px;
   color: white;
