--- a/app/view/about/marketing-property.html
+++ b/app/view/about/marketing-property.html
@@ -26,7 +26,8 @@
       <a class="common-btn" href="/list-property" style="width: 250px;display: inline-block;">List Your Property</a>
     </p>
   </div>
-  <iframe id="ifr" onload="onloadMP();" src="/marketing-your-home" scrolling="no" style="width:100%;height: 600px; margin-bottom:50px;" frameborder="0"></iframe>
+  <div style="-webkit-overflow-scrolling:touch; overflow: scroll; "><iframe id="ifr" onload="onloadMP();" src="/marketing-your-home" scrolling="no" style="width:100%;height: 600px; margin-bottom:50px;" frameborder="0"></iframe></div>
+  
   <script>
     function onloadMP() {
       var ifr = document.getElementById('ifr');
