--- a/app/view/about/marketing-your-home.html
+++ b/app/view/about/marketing-your-home.html
@@ -46,7 +46,7 @@
 								<figcaption>
 									<h2>COLLECTION</h2>
                                     <p>Access to many of the Hong Kong’s wealthiest clientele, including the luxury home owners and occupants in prestige locations, this exclusive publication of List Sotheby’s International Realty, Hong Kong showcases the most extraordinary homes from Hong Kong and other distinct locations around the world. COLLECTION is also distributed to Hong Kong Grade A Commercial Buildings, Private Clubs, Sotheby’s Hong Kong Auction House and participating affiliates of Sotheby’s International Realty®.</p>
-								    <p>Advertising Enquiries <a href="mailto:Enquiries%20collection@listsirhk.com">collection@listsirhk.com</a></p>
+								    <p>Advertising Enquiries <a href="mailto:collection@listsirhk.com?subject=Collection Enquiries">collection@listsirhk.com</a></p>
                                 </figcaption>
 							</figure>
 							<figure class="move-image selected print">
