--- a/app/style/result.less
+++ b/app/style/result.less
@@ -138,12 +138,14 @@
       height: 32px;
       width: 32px;
       font-size: 12px;
+      color: @primary-color;
       a {
         color: @primary-color;
       }
     }
     &.active {
       background-color: @primary-color;
+      color: #ffffff;
       a {
         color: white;
       }
