--- a/app/view/buy/buy.html
+++ b/app/view/buy/buy.html
@@ -31,23 +31,23 @@
     <div class="search-pager">
       {% if pages.pagination.length > 1 %}
       <ul class="pagination">
-        <li class="arrow">
-          <a href="{{activeMenu}}-result?{{pages.prevUrl}}" aria-label="Previous">
+        <a href="{{activeMenu}}-result?{{pages.prevUrl}}" aria-label="Previous">  <li class="arrow">
+         
             <span aria-hidden="true"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-          </a>
-        </li>
+        
+        </li>  </a>
         {% for item in pages.pagination %}
           {% if pages.currPage == item.page %}
-            <li class="active"><a href="{{activeMenu}}-result?{{item.params}}">{{item.page}}</a></li>
+          <a href="{{activeMenu}}-result?{{item.params}}"></a>  <li class="active">{{item.page}}</li></a>
           {% else %}
             <li><a href="{{activeMenu}}-result?{{item.params}}">{{item.page}}</a></li>
           {% endif %}
         {% endfor %}
-        <li class="arrow">
-          <a href="{{activeMenu}}-result?{{pages.nextUrl}}" aria-label="Next">
+        <a href="{{activeMenu}}-result?{{pages.nextUrl}}" aria-label="Next">  <li class="arrow">
+          
             <span aria-hidden="true"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-          </a>
-        </li>
+        
+        </li>  </a>
         <li><a href="{{activeMenu}}-result?{{item.params}}">{{pages.currPage}}/{{pages.totalPages}}</a></li>
       </ul>
       {% endif %}
