--- a/app/view/home/buy-rent.html
+++ b/app/view/home/buy-rent.html
@@ -113,7 +113,7 @@
           </div>
           
           <div class="col-md-4 col-sm-6 col-xs-12">
-            {{forms.field('price_ask', 'ASKING (HKD)')}}
+            {{forms.field('price_ask', 'ASKING PRICE (HKD)')}}
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12">
             {{forms.field('address', 'ADDRESS')}}
