--- a/app/view/our-team/member-detail.html
+++ b/app/view/our-team/member-detail.html
@@ -6,7 +6,7 @@
       </div>
       <div class="dialog-body" style="padding: 0;">
         <div style="padding-top: 50px;padding-left: 20px;">
-          <span>AGENT INFO</span>
+          <span>PROFILE</span>
         </div>
         <div class="agent-detail-box">
           <div class="bg">
