--- a/app/style/property-detail.less
+++ b/app/style/property-detail.less
@@ -6,6 +6,7 @@
 }
 
 .detail-gallary {
+  overflow: hidden;
   #mobile-gallery {
     display: none;
   }
@@ -264,7 +265,6 @@
 .property-box {
   padding: 10px;
   border: 1px solid #cccccc;
-  border-bottom: 0;
   &.hide {
     background-color: #f4f4f4;
     .min {
