--- a/app/view/base/footer.html
+++ b/app/view/base/footer.html
@@ -39,7 +39,7 @@
     </div>
   </div>
   <div class="line"></div>
-  <div class="desc" style="margin-bottom: 5px; font-weight: 500;">Site Map | Privacy Policy | Terms and Conditions | <a href="/full-disclaimer" target="_blank">Our Fair Housing Pledge</a></div>
+  <div class="desc" style="margin-bottom: 5px; font-weight: 500;">Site Map | <a href="javascript:void(0);" data-dialog="website-privacy">Privacy Policy</a> | Terms and Conditions | <a href="/full-disclaimer" target="_blank">Our Fair Housing Pledge</a></div>
   <div class="desc text-lighter" style="font-size: 14px;Color: #bd9e64">
      <a href="http://www.sothebys.com/en.html"  style="font-size: 14px;Color: #bd9e64" target="_blank">Visit the Sotheby’s Auction House</a>
   </div>
