--- a/app/view/international/international.html
+++ b/app/view/international/international.html
@@ -51,9 +51,10 @@
         <div class="left-box">
           <div class="property-box" style="border-bottom: 1px solid #cccccc; margin-bottom: 20px;">
             <div class="title toggle">
-              <span class="plus"><i class="fa fa-plus" aria-hidden="true"></i></span>
+              <!-- <span class="plus"><i class="fa fa-plus" aria-hidden="true"></i></span>
               <span class="min"><i class="fa fa-minus" aria-hidden="true"></i></span>
-              Property Description
+              Property Description -->
+              {{property.title}}
             </div>
             <div class="body">
               {% for item in property.propertyDesc %}
