--- a/app/view/our-team/our-team.html
+++ b/app/view/our-team/our-team.html
@@ -55,7 +55,7 @@
           $('#agent-detail-dialog-mobile').text($target.data('mobile'));
           $('#agent-detail-dialog-image').attr('src', $target.data('image'));
           $('#agent-detail-dialog').fadeIn(400);
-          if($target.data('licence') === '0' || $target.data('licence') === '') {
+          if($target.data('licence') == '0' || $target.data('licence') === '') {
             $('#agent-detail-dialog-licence-wrapper').css('visibility', 'hidden');
           } else {
             $('#agent-detail-dialog-licence-wrapper').css('visibility', 'visible');
