--- a/app/style/home.less
+++ b/app/style/home.less
@@ -329,14 +329,15 @@
   font-size: 16px;
   margin-top: 22px;
   margin-bottom: 22px;
-  // padding:0 15px;
+  padding:0 15px;
   line-height: 28px;
 }
+
 
 .join-team-desc {
   font-size: 16px;
   margin: 20px auto;
-  // padding: 15px;
+ padding: 15px;
   max-width: 910px;
   line-height: 28px;
 }
