--- a/app/style/main.less
+++ b/app/style/main.less
@@ -83,6 +83,7 @@ label.error {
   font-weight: 300!important;
   margin-bottom: 30px;
 }
+
 // form label{
 //   text-transform: uppercase;
 // }
@@ -145,8 +146,21 @@ label.error {
   }
 }
 
+    @media (max-width: 750px){
+
+      .gally-scroll{
+        -webkit-overflow-scrolling:touch;  -moz-overflow-scrolling:touch;overflow: scroll; 
+      }
+      .career{
+        padding:0 15px;
+      }
+  
+    }
+
+
 
 @media (max-width: 500px) {
+
   .agent-detail-box {
     padding-top: 20px;
     height: 100%;
