--- a/app/style/result.less
+++ b/app/style/result.less
@@ -1,6 +1,6 @@
 // buy, rent page
 .result-page {
-  padding:0px 10px 60px 0;
+  padding:0px 10px 60px 10px;
   .sub-slider {
     margin: 0 -12px;
     height: 170px;
