--- a/app/view/about/marketing-property.html
+++ b/app/view/about/marketing-property.html
@@ -19,14 +19,14 @@
   </div>
   <div class="marketing-home-wrapper">
       <span class="text-center title-parg">MARKETING YOUR HOME</span>
-    <p class="career-desc">
+    <p class="career-desc"style="padding:0 15px;">
       Our sales and marketing strategy is all about making impressions worldwide. It’s about creating global connections and establishing true consumer engagement.
     </p>
     <p class="text-center">
       <a class="common-btn" href="/list-property" style="width: 250px;display: inline-block;">List Your Property</a>
     </p>
   </div>
-  <div style="-webkit-overflow-scrolling:touch; overflow: scroll; "><iframe id="ifr" onload="onloadMP();" src="/marketing-your-home" scrolling="no" style="width:100%;height: 600px; margin-bottom:50px;" frameborder="0"></iframe></div>
+  <div class="gally-scroll"><iframe id="ifr" onload="onloadMP();" src="/marketing-your-home" scrolling="no" style="width:100%;height: 600px; margin-bottom:50px;" frameborder="0"></iframe></div>
   
   <script>
     function onloadMP() {
