--- a/app/view/buy/detail.html
+++ b/app/view/buy/detail.html
@@ -15,7 +15,7 @@
   {% include "../base/header.html" %}
   {% include "../our-team/member-detail.html" %}
   {% import "../base/forms.html" as forms %}
-  <div class="s-container" style="position: relative; margin-top:15px;">
+  <div class="s-container" style="position: relative">
     <div style="padding-left: 8px; margin-bottom: 0px;" class="link-map">
       <a href="/">Home &gt;</a> 
       <a href="/{{activeMenu}}-search">Search &gt;</a> 
