--- a/app/view/about/contact-us.html
+++ b/app/view/about/contact-us.html
@@ -122,7 +122,7 @@
         <form id="contact-us-form" method="post" onsubmit="return false;" class="container">
           <div class="row" style="margin-bottom: 22px;">
             <div class="col-md-12">
-              <h1 class="contact-us-h2">Get more information from our team of professionals</h1>
+              <h1 class="title-parg">Get more information from our team of professionals</h1>
             </div>
             <div class="col-md-12">
               <p class="enqury-desc">
