--- a/app/view/base/footer.html
+++ b/app/view/base/footer.html
@@ -6,7 +6,7 @@
     </div>
     <div class="row">
       <div class="col-lg-6 col-md-12 col-sm-12 list">
-          <div style="width: 300px;">
+          <div style="width:100%;">
               <img src="public/images/footer-logo.png" style="width: 200px;">
            </div>
         <div class="link-group" style="margin-left: 4px;">
