--- a/app/style/about.less
+++ b/app/style/about.less
@@ -262,6 +262,9 @@
   max-width: 910px;
   margin: 0 auto;
   font-size: 16px;
+  .career-desc,.join-team-desc{
+    padding:0px;
+  }
   h1 {
     color: #002b5c;
     margin-bottom: 30px;
@@ -288,9 +291,32 @@
   p {
     margin-bottom: 25px;
   }
+  .box {
+    .box-outter {
+      margin: 0 auto;
+    }
+    img{
+      width: 100%;
+      height: auto;
+    }
+
+  }
+  .career-desc{
+    padding: 0 15px;
+  }
+  
 }
 
-
+.brand-heritage-wrapper{
+  background-color: #FAFAFA;margin-top: 50px;padding:50px 0;
+  .banner-item{
+    max-width:910px;
+    margin:0 auto 30px;
+    img{
+      width:100%;
+    }
+  }
+}
 
 // contact us
 .contact-block {
@@ -362,6 +388,7 @@
   font-size: 16px;
   margin-top: 0px;
   line-height: 30px;
+  padding:0 8px;
 }
 
 .management-pic-wrapper {
