--- a/app/view/about/brand-heritage.html
+++ b/app/view/about/brand-heritage.html
@@ -137,17 +137,61 @@
     {% endfor %}
   </div>
   
-  <div class="brand-heritage" style="margin-top: 50px;">
-    <h1 class="text-center title-parg" >Sotheby’s International Realty <span style="font-size: 14px;vertical-align: top;">®</span></h1>
-    <p class="career-desc">
-        Founded on the same commitment to exceptional service that characterized the Sotheby’s Auction House for more than two centuries, the Sotheby’s International Realty® brand is created and becomes known around the world for the distinctive properties it represents. 
-    </p>
-    <p class="career-desc">
-        The Sotheby’s international Realty® brand is synonymous with excellence, luxury, taste and discernment, offering only the best and never settling for less. Sotheby’s International realty network provides access to luxury real estate and homes for sale worldwide, and the website allows you to search property listings globally, and includes a large inventory of luxury homes that matches your lifestyle choices such as waterfront, golf, island, vacation, mountain and many others.        
-    </p>
-  </div>
+  <div class="brand-heritage-wrapper">  
+    
+    <div class="banner-item"><img src="/public/brand/realty.jpg"/></div>
+
+    <div class="brand-heritage" style="margin-top: 50px;">
+      <h1 class="text-center title-parg" >Sotheby’s International Realty <span style="font-size: 14px;vertical-align: top;">®</span></h1>
+      <p class="career-desc">
+          Founded on the same commitment to exceptional service that characterized the Sotheby’s Auction House for more than two centuries, the Sotheby’s International Realty® brand is created and becomes known around the world for the distinctive properties it represents. 
+      </p>
+      <p class="career-desc">
+          The Sotheby’s international Realty® brand is synonymous with excellence, luxury, taste and discernment, offering only the best and never settling for less. Sotheby’s International realty network provides access to luxury real estate and homes for sale worldwide, and the website allows you to search property listings globally, and includes a large inventory of luxury homes that matches your lifestyle choices such as waterfront, golf, island, vacation, mountain and many others.        
+      </p>
+    </div></div>
+
 
   <div class="brand-heritage" style="margin-top: 50px;">
+      <div class="row" style="margin: 20px auto;margin-bottom: 40px;">
+          
+           
+           <div class="box-outter">
+             <div class="box">
+               <div class="box-inner">
+                 <img src="/public/brand/list_sothebys_01.jpg">
+               </div>
+             </div>
+           </div><div class="box-outter">
+             <div class="box">
+               <div class="box-inner">
+                 <img src="/public/brand/list_sothebys_02.jpg">
+               </div>
+             </div>
+           </div><div class="box-outter">
+             <div class="box">
+               <div class="box-inner">
+                 <img src="/public/brand/list_sothebys_03.jpg">
+               </div>
+             </div>
+           </div>
+         
+           
+           <div class="box-outter">
+             <div class="box">
+               <div class="box-inner">
+                 <img src="/public/brand/list_sothebys_04.png">
+               </div>
+             </div>
+           </div>
+         
+           
+         </div>
+          
+           
+        
+
+
     <h1 class="text-center title-parg">List Group</h1>
     <p class="career-desc">
         The List Company was established in 1991, immediately after the real estate bubble burst in Japan. The focus of our organization was to transform the real estate industry that was in a period of chaos at the time, and restore the real value of real estate and trust in real estate as an asset. 
