--- a/app/view/search/list-property.html
+++ b/app/view/search/list-property.html
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6">{{forms.field('price_ask', 'Asking (HKD)')}}</div>
+        <div class="col-md-6">{{forms.field('price_ask', 'ASKING PRICE (HKD)')}}</div>
         <div class="col-md-6">{{forms.field('address', 'ADDRESS')}}</div>
       </div>
       <div class="row">
