--- a/app/view/international/international.html
+++ b/app/view/international/international.html
@@ -116,7 +116,7 @@
               <div class="row"> 
                 <div class="col-md-12 field-row"> 
                   <div class="text-area-field"> 
-                    <textarea maxlength="20480" name="enquiry-box-message" id="enquiry-box-message" placeholder="Please let us know more about the type of property you are looking for⋯"></textarea> 
+                    <textarea maxlength="20480" name="enquiry-box-message" id="enquiry-box-message" placeholder="Please let us know more about the type of property you are looking for..."></textarea> 
                   </div> 
                 </div> 
               </div> 
