--- a/app/style/property-detail.less
+++ b/app/style/property-detail.less
@@ -285,7 +285,7 @@
   }
   .body {
     height: auto;
-padding: 0 10px;
+// padding: 0 10px;
     h2 {
       margin-left: -8px;
       margin-top: 12px;
