--- a/app/style/property-detail.less
+++ b/app/style/property-detail.less
@@ -283,9 +283,9 @@
     height: 20px;
     font-size: 14px;
   }
-  .body {
+  .box-content {
     height: auto;
-// padding: 0 10px;
+padding: 0 10px;
     h2 {
       margin-left: -8px;
       margin-top: 12px;
