--- a/app/view/international/international-list.html
+++ b/app/view/international/international-list.html
@@ -10,8 +10,8 @@
 <body>
   {% include "../base/header.html" %}
   <div class="s-container ">
-    <span class="text-center title-h1" style="margin-top:50px; margin-bottom:30px; padding:0 15px;" >For  the ongoing collection of life<span style="font-size: 14px;vertical-align: top;">®</span></span>
-   <div class="marketing-home-wrapper">   <p class="text-center our-team-desc">We carry some of the most prestigious and exclusive properties worldwide </p></div>
+    <span class="text-center title-h1" style="margin-top:50px; margin-bottom:30px; padding:0 15px;" >International Projects</span>
+   <div class="marketing-home-wrapper">   <p class="text-center our-team-desc">We carry some of the most prestigious and exclusive properties worldwide. Each of them has its unique story behind. Let us inspire you and expand your on-going collections of life. </p></div>
   
     <div class="international-list">
       <div class="row" style="margin: 20px auto;margin-bottom: 50px;">
